--- a/app/templates/_index.html
+++ b/app/templates/_index.html
@@ -15,11 +15,8 @@
 
 	<div class="content-wrapper">
 		{{ > header }}
-		{{ > home/step-1 }}
-		{{ > home/step-2 }}
-		{{ > home/step-3 }}
-		{{ > home/step-4 }}
-		{{ > footer }}
+		{{ > home/home }}
+
 		{{ > lines }}
 	</div>
 
