--- a/app/templates/partials/home/step-1.html
+++ b/app/templates/partials/home/step-1.html
@@ -1,4 +1,4 @@
-<div class="step-1">
+<div class="step step-1">
 	<div class="img-wrapper">
 		<div class="img img-1"></div>
 		<div class="img img-2"></div>
@@ -6,7 +6,7 @@
 		<div class="img img-4"></div>
 
 		<div class="text">
-			<p>Acme celebrates <span>40 years of ricing</span> supporting regional industries</p>
+			<p>Ваш <span>успіх</span> складається<br>з <span>нашої</span> плити</p>
 		</div>
 	</div>
 </div>
