--- a/app/templates/partials/home/step-2.html
+++ b/app/templates/partials/home/step-2.html
@@ -1,9 +1,13 @@
-<div class="step-2">
+<div class="step step-2">
 	<div class="wrapper">
+
+		<!-- title -->
 		<div class="title-step">
 			<h2>Виробляємо</h2>
 			<p class="sub">всі види сендвіч панелей</p>
 		</div>
+
+		<!-- buttons -->
 		<div class="buttons-wrapper">
 			<div class="home-button">
 				<span class="top"><span>Пінополістерол</span></span>
@@ -21,15 +25,19 @@
 				<span><span>Покрівельні</span></span>
 			</div>
 		</div>
+
+		<!-- visualization -->
 		<div class="visualization">
 			<div class="viz-wrapper">
-				<div class="image" style="background:url('pictures/img2.jpg') no-repeat center/contain"></div>
+				<div class="image" style="background:url('pictures/img2.jpg') no-repeat center"></div>
 				<div class="content">
 					
 				</div>
 				<span class="more">Детальніше</span>
 			</div>
 		</div>
+
+		<!-- container -->
 		<div class="container">
 			<div class="wrapper">
 				<h3>Переваги<span>сендвіч панелей</span></h3>
@@ -62,5 +70,6 @@
 				</div>
 			</div>
 		</div>
+
 	</div>
 </div>
