--- a/scss/general/layout/_body.scss
+++ b/scss/general/layout/_body.scss
@@ -5,7 +5,7 @@ body {
 body {
 	//padding: 24px;
 	padding: 1vw;
-		font-family: $text;
+		font-family: $text300;
 		font-weight: 300;
 		font-size: 16px;
 		line-height: 180%;
