--- a/app/templates/partials/montage/step-4.html
+++ b/app/templates/partials/montage/step-4.html
@@ -8,11 +8,11 @@
 			</div>
 		</div>
 		<div class="item-wrapper">
-			<div class="item item-1" style="background:url('{{{about.image-1}}}') no-repeat center/cover fixed"></div>
-			<div class="item item-2" style="background:url('{{{about.image-1}}}') no-repeat center/cover fixed"></div>
-			<div class="item item-3" style="background:url('{{{about.image-1}}}') no-repeat center/cover fixed"></div>
-			<div class="item item-4" style="background:url('{{{about.image-1}}}') no-repeat center/cover fixed"></div>
-			<div class="item item-5" style="background:url('{{{about.image-1}}}') no-repeat center/cover fixed"></div>
+			<div class="wow item item-1" style="background:url('{{{about.image-1}}}') no-repeat center/cover fixed"></div>
+			<div class="wow item item-2" style="background:url('{{{about.image-1}}}') no-repeat center/cover fixed"></div>
+			<div class="wow item item-3" style="background:url('{{{about.image-1}}}') no-repeat center/cover fixed"></div>
+			<div class="wow item item-4" style="background:url('{{{about.image-1}}}') no-repeat center/cover fixed"></div>
+			<div class="wow item item-5" style="background:url('{{{about.image-1}}}') no-repeat center/cover fixed"></div>
 		</div>
 	</div>
 </div>
