--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -2,7 +2,7 @@
 // FOUNDATION SETTINGS
 //
 
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700&subset=latin,cyrillic-ext,latin-ext);
+@import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:700);
 
 // This is the default html and body font-size for the base rem value.
 $rem-base: 16px;
@@ -42,8 +42,11 @@ $total-columns: 12;
 
 // We use these to control various global styles
 $body-bg: #fff;
-$title: 'Roboto', sans-serif;
-$text: 'Roboto', sans-serif;
+$textNum: 'Roboto Condensed', sans-serif;
+$text100: 'museo_sans_cyrl100';
+$text300: 'museo_sans_cyrl300';
+$text500: 'museo_sans_cyrl500';
+$text700: 'museo_sans_cyrl700';
 
 // We use this to control font-smoothing
 // $font-smoothing: antialiased;
