--- a/scss/content/home/_step-2.scss
+++ b/scss/content/home/_step-2.scss
@@ -1,8 +1,6 @@
 .step-2 {
-	position: relative;
-	height: 100vh;
-	min-height: 800px;
-	padding: 1vw 0;
+	pointer-events: none;
+
 	.wrapper {
 		position: relative;
 		width: 100%;
@@ -11,6 +9,9 @@
 
 	// title
 	.title-step {
+		transition: opacity $duration .2s, transform $duration .2s ease;
+		opacity: 0;
+		transform: translateY(20px);
 		margin-left: 10%;
 		h2, .sub {
 			margin: 0;
@@ -27,10 +28,20 @@
 		position: relative;
 		top: 3vw;
 		width: 16.666666666666668%;
-		//margin-left: 16.666666666666668%;
 		margin-left: 10%;
 		padding: 0 1vw;
 		.home-button {
+			opacity: 0;
+			transform: translateY(20px);
+			&:nth-child(1) {
+				transition: opacity $duration .4s, transform $duration .4s ease;
+			}
+			&:nth-child(2) {
+				transition: opacity $duration .6s, transform $duration .6s ease;
+			}
+			&:nth-child(3) {
+				transition: opacity $duration .8s, transform $duration .8s ease;
+			}
 			&:not(:last-child) {
 				margin: 3vw 0;
 			}
@@ -57,22 +68,28 @@
 
 	// visualization
 	.visualization {
+		transition: height $duration 1s ease;
+		z-index: -1;
 		position: absolute;
-		top: 0;
-		left: calc(16.666666666666668% * 1);
-		width: calc(16.666666666666668% * 3);
-		height: 100%;
+		bottom: 0;
+		left: calc(16.666666666666668% * 2 + 4px);
+		width: calc(16.666666666666668% * 2 - 9px);
+		height: 0;
+		overflow: hidden;
 		.viz-wrapper {
+			position: absolute;
+			bottom: 0;
+			left: 0;
 			width: 100%;
-			height: 100%;
+			height: calc(100vh - 2vw);
 			.image {
-				width: 32vw;
+				width: calc(32vw - 2px);
 				height: 32vw;
 				position: absolute;
 				top: 50%;
-				left: 50%;
-				transform: translate(-50%, -50%);
-				margin: 4vw 0 0 4vw;
+				left: 0;
+				transform: translateY(-50%);
+				margin: 0;
 			}
 		}
 
@@ -95,16 +112,22 @@
 
 	// container
 	.container {
+		transition: height $duration 0s ease;
 		position: absolute;
-		top: 5%;
+		bottom: 0;
 		right: 0;
 		width: calc(16.666666666666668% * 2 - 4px);
-		height: 90%;
+		height: 0;
+		overflow: hidden;
 		.wrapper {
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			width: 100%;
+			height: calc(100vh - 2vw);
 			padding: 0 0 0 7vw;
 			background: #ebebeb;
 			width: 100%;
-			height: 100%;
 
 			// title
 			h3 {
@@ -163,5 +186,4 @@
 			}
 		}
 	}
-
 }
