--- a/scss/content/home/_step-4.scss
+++ b/scss/content/home/_step-4.scss
@@ -1,10 +1,6 @@
 .step-4 {
-	position: relative;
-	//outline: 1px solid #00ff5e;
-	margin: 4vw 0 0 0;
-	padding: 6vw 0 0 0;
-	height: 100vh;
-	min-height: 900px;
+	opacity: 0;
+	pointer-events: none;
 
 	// title
 	.title-step {
