--- a/scss/content/montage/_step-1.scss
+++ b/scss/content/montage/_step-1.scss
@@ -41,37 +41,57 @@
 			&.item-1 {
 				bottom: 15%;
 				left: 4px;
-				height: 30%;
+				height: 0;
 				width: calc(16.666666666666668% * 1 - 9px);
 				z-index: -1;
 				-webkit-filter: grayscale(100%);
 				opacity: 0.1;
+				transition: height $duration 0s cubic-bezier(0.52, 0.09, 0.12, 1);
+				&.animated {
+					height: 30%;
+				}
 			}
 			&.item-2 {
 				bottom: 0;
 				left: calc(16.666666666666668% * 2 + 3px);
-				height: 30%;
+				height: 0;
 				width: calc(16.666666666666668% * 1 - 8px);
+				transition: height $duration .2s cubic-bezier(0.52, 0.09, 0.12, 1);
+				&.animated {
+					height: 30%;
+				}
 			}
 			&.item-3 {
 				bottom: 0;
 				left: calc(16.666666666666668% * 3 + 3px);
-				height: 70%;
+				height: 0;
 				width: calc(16.666666666666668% - 8px);
 				-webkit-filter: grayscale(100%);
 				opacity: 0.1;
+				transition: height $duration .1s cubic-bezier(0.52, 0.09, 0.12, 1);
+				&.animated {
+					height: 70%;
+				}
 			}
 			&.item-4 {
 				top: 0;
 				left: calc(16.666666666666668% * 4 + 4px);
-				height: 70%;
+				height: 0;
 				width: calc(16.666666666666668% * 2 - 4px);
+				transition: height $duration .3s cubic-bezier(0.52, 0.09, 0.12, 1);
+				&.animated {
+					height: 70%;
+				}
 			}
 			&.item-5 { display: none;
 				top: 0;
 				left: calc(16.666666666666668% * 5 + 4px);
-				height: 40%;
+				height: 0;
 				width: calc(16.666666666666668% - 8px);
+				transition: height $duration .4s cubic-bezier(0.52, 0.09, 0.12, 1);
+				&.animated {
+					height: 40%;
+				}
 			}
 		}
 	}
