--- a/scss/content/montage/_step-3.scss
+++ b/scss/content/montage/_step-3.scss
@@ -47,36 +47,56 @@
 			&.item-1 {
 				bottom: 0%;
 				left: 4px;
-				height: 30%;
+				height: 0%;
 				width: calc(16.666666666666668% * 1 - 9px);
 				-webkit-filter: grayscale(100%);
 				opacity: 0.1;
+				transition: height $duration .2s cubic-bezier(0.52, 0.09, 0.12, 1);
+				&.animated {
+					height: 30%;
+				}
 			}
 			&.item-2 {
 				bottom: 0;
 				left: calc(16.666666666666668% * 3 + 3px);
-				height: 30%;
+				height: 0%;
 				width: calc(16.666666666666668% * 1 - 8px);
+				transition: height $duration .3s cubic-bezier(0.52, 0.09, 0.12, 1);
+				&.animated {
+					height: 30%;
+				}
 			}
 			&.item-3 { display: none;
 				bottom: 50%;
 				left: calc(16.666666666666668% * 3 + 3px);
-				height: 40%;
+				height: 0%;
 				width: calc(16.666666666666668% * 1 - 8px);
+				transition: height $duration 0s cubic-bezier(0.52, 0.09, 0.12, 1);
+				&.animated {
+					height: 40%;
+				}
 			}
 			&.item-4 {
 				bottom: 0;
 				left: calc(16.666666666666668% * 4 + 4px);
-				height: 60%;
+				height: 0%;
 				width: calc(16.666666666666668% * 1 - 9px);
 				-webkit-filter: grayscale(100%);
 				opacity: 0.1;
+				transition: height $duration 0s cubic-bezier(0.52, 0.09, 0.12, 1);
+				&.animated {
+					height: 60%;
+				}
 			}
 			&.item-5 {
-				top: 0;
+				bottom: 50%;
 				left: calc(16.666666666666668% * 5 + 4px);
-				height: 50%;
+				height: 0%;
 				width: calc(16.666666666666668% - 4px);
+				transition: height $duration .1s cubic-bezier(0.52, 0.09, 0.12, 1);
+				&.animated {
+					height: 50%;
+				}
 			}
 		}
 	}
