--- a/app/templates/partials/home/home.html
+++ b/app/templates/partials/home/home.html
@@ -1,6 +1,8 @@
-<div class="slider-wrapper" page="page-1">
+<div class="slider-wrapper" name="page-1" direction="next" page="page-1">
 	{{ > home/step-1 }}
 	{{ > home/step-2 }}
 	{{ > home/step-3 }}
 	{{ > home/step-4 }}
+	{{ > home/step-5 }}
+	{{ > home/step-6 }}
 </div>
