--- a/app/templates/partials/home/step-3.html
+++ b/app/templates/partials/home/step-3.html
@@ -1,35 +1,12 @@
-<div class="step step-3" position="" step="">
+<div class="step step-3">
 	<div>
 
 		<!-- text -->
 		<div class="title-step">
-			<div class="title title-1">
-				<div>
-					<h2>Сучасне</h2>
-					<p class="sub">виробництво</p>
-					<div class="text">
-						<p>Італійське обладнання останнього, п'ятого покоління робить процес виготовлення повністю автоматизованим</p>
-					</div>
-				</div>
-			</div>
-			<div class="title title-2">
-				<div>
-					<p class="sub">Професійний</p>
-					<h2>монтаж</h2>
-					<div class="text">
-						<p>15 монтажних команд, які вже 14 років монтують будь яку сендвіч панель</p>
-					</div>
-				</div>
-			</div>
-			<div class="title title-3">
-				<div>
-					<p class="sub">Реалізовані</p>
-					<h2>проекти</h2>
-					<div class="text">
-						<p>Ви можете переглянути всі проекти детально на сторінці проектів</p>
-						<a href="#" class="button">Переглянути проекти</a>
-					</div>
-				</div>
+			<h2>Сучасне</h2>
+			<p class="sub">виробництво</p>
+			<div class="text">
+				<p>Італійське обладнання останнього, п'ятого покоління робить процес виготовлення повністю автоматизованим</p>
 			</div>
 		</div>
 
@@ -38,66 +15,6 @@
 			<div class="item item-1" style="background:url('pictures/img5.jpg') no-repeat center/cover fixed"></div>
 			<div class="item item-2" style="background:url('pictures/img5.jpg') no-repeat center/cover fixed"></div>
 			<div class="item item-3" style="background:url('pictures/img5.jpg') no-repeat center/cover fixed"></div>
-		</div>
-
-		<!-- video -->
-		<div class="video-wrapper">
-			<div class="video video-1">
-				<div>
-					<video id="video-home-1" class="video-home" preload="none" loop>
-						<source src="video/video1.mp4" type="video/mp4">
-					</video>
-				</div>
-			</div>
-			<div class="video video-2">
-				<div>
-					<video id="video-home-2" class="video-home" preload="none" loop>
-						<source src="video/video1.mp4" type="video/mp4">
-					</video>
-				</div>
-			</div>
-			<div class="video video-3">
-				<div>
-					<video id="video-home-3" class="video-home" preload="none" loop>
-						<source src="video/video1.mp4" type="video/mp4">
-					</video>
-				</div>
-			</div>
-		</div>
-
-		<!-- slider -->
-		<div class="slider-wrapper">
-			<div class="items">
-				{{#home-project.item}}
-				<div class="item {{{class}}}">
-					<div class="img img-1" style="background:url('{{{image}}}') no-repeat center/cover fixed"></div>
-					<div class="img img-2" style="background:url('{{{image}}}') no-repeat center/cover fixed"></div>
-					<div class="description">
-						<div class="content-wrapper">
-							<h3>{{{title}}}</h3>
-							<p><span>Наповнювач: </span>{{{description-1}}}</p>
-							<p><span>Площа: </span>{{{description-2}}} кв. м.</p>
-							<p><span>Рік: </span>{{{description-3}}} р.</p>
-							<p class="text">{{{text}}}</p>
-						</div>
-					</div>
-				</div>
-				{{/home-project.item}}
-			</div>
-			<div class="controls">
-				<div>
-					<div>
-						<div class="controll prev"></div>
-						<div class="controll next"></div>
-					</div>
-				</div>
-			</div>
-			<div class="pagination">
-				<div class="point point-1"></div>
-				<div class="point point-2"></div>
-				<div class="point point-3"></div>
-				<div class="point point-4"></div>
-			</div>
 		</div>
 
 	</div>
