--- a/app/templates/partials/home/step-4.html
+++ b/app/templates/partials/home/step-4.html
@@ -1,46 +1,43 @@
 <div class="step step-4">
-	<div class="title-step">
-		<h2>Контакти</h2>
-		<div class="text">
-			<p>Lorem ipsum dolor sit amet, consectetur<br>adipisicing elit. Vero, facere!</p>
-		</div>
-	</div>
+	<div>
 
-	<!-- address -->
-	<div class="address-wrapper">
-		<div class="address address-1">
-			<div>
+		<!-- text -->
+		<div class="title-step">
+			<div class="title title-2">
 				<div>
-					<p class="city">м. Червоноград</p>
-					<p class="text">
-						(03249) 4-78-89 <br>
-						termobud@bis.net.ua
-					</p>
+					<p class="sub">Професійний</p>
+					<h2>монтаж</h2>
+					<div class="text">
+						<p>15 монтажних команд, які вже 14 років монтують будь яку сендвіч панель</p>
+					</div>
 				</div>
 			</div>
 		</div>
-		<div class="address address-2">
-			<div>
+
+		<!-- video -->
+		<div class="video-wrapper">
+			<div class="video video-1">
 				<div>
-					<p class="city">м. Тернопіль</p>
-					<p class="text">
-						(03249) 4-78-89 <br>
-						termobud@bis.net.ua
-					</p>
+					<video id="video-home-1" class="video-home" preload="none" loop>
+						<source src="video/video1.mp4" type="video/mp4">
+					</video>
+				</div>
+			</div>
+			<div class="video video-2">
+				<div>
+					<video id="video-home-2" class="video-home" preload="none" loop>
+						<source src="video/video1.mp4" type="video/mp4">
+					</video>
+				</div>
+			</div>
+			<div class="video video-3">
+				<div>
+					<video id="video-home-3" class="video-home" preload="none" loop>
+						<source src="video/video1.mp4" type="video/mp4">
+					</video>
 				</div>
 			</div>
 		</div>
-		<div class="address address-3">
-			<div>
-				<div>
-					<p class="city">с. Кринички</p>
-					<p class="text">
-						Миколаївська область <br>
-						(03249) 4-78-89 <br>
-						termobud@bis.net.ua
-					</p>
-				</div>
-			</div>
-		</div>
+
 	</div>
 </div>
