--- a/scss/content/home/_step-3.scss
+++ b/scss/content/home/_step-3.scss
@@ -1,70 +1,19 @@
 .step-3 {
-	opacity: 0;
 	pointer-events: none;
-
-	> div {
-		padding: 1px 0 0 0;
-		position: relative;
-		top: 0;
-		left: 0;
-		width: 100%;
-		min-height: calc(100vh - 2vw);
-	}
 
 	// title
 	.title-step {
 		position: relative;
 		z-index: 2;
-		margin: 5vw 1vw 0 18%;
 		padding: 0;
-		.title {
-			transition: width .6s 0s ease;
-			overflow: hidden;
-			width: 0;
-			position: absolute;
-			top: 0;
-			left: 0;
-			&.title-1 {
-				transition: width .6s .6s ease;
-				width: 19vw;
-			}
-			> div {
-				width: 19vw;
-			}
-		}
-		h2 {
+		margin: 5vw 1vw 0 18%;
+		opacity: 0;
+		transform: translateY(20px);
+		transition-property: opacity, transform;
+		transition-timing-function: $timing-ease;
+		transition-duration: $duration;
+		h2, .sub {
 			margin: 0;
-		}
-		.sub {
-			margin: 0;
-		}
-		
-	}
-	&[step="content-2"] {
-		.title-step .title {
-			&.title-1 {
-				transition: width .6s 0s ease;
-				width: 0;
-			}
-			&.title-2 {
-				transition: width .6s .6s ease;
-				width: 19vw;
-			}
-		}
-	}
-	&[step="content-3"] {
-		.title-step .title {
-			&.title-1 {
-				width: 0;
-			}
-			&.title-2 {
-				transition: width .6s 0s ease;
-				width: 0;
-			}
-			&.title-3 {
-				transition: width .6s .6s ease;
-				width: 19vw;
-			}
 		}
 	}
 
@@ -78,11 +27,13 @@
 		height: 100%;
 		.item {
 			position: absolute;
-			transition: height .6s ease;
+			transition-property: height;
+			transition-timing-function: $timing-ease;
+			transition-duration: $duration;
 			&.item-1 {
 				top: 50%;
 				left: -14px;
-				height: 30%;
+				height: 0;
 				width: calc(16.666666666666668% * 1 + -3px);
 				-webkit-filter: grayscale(100%);
 				opacity: 0.1;
@@ -90,332 +41,16 @@
 			&.item-2 {
 				top: 70%;
 				left: calc(16.666666666666668% - 9px);
-				height: 30%;
+				height: 0;
 				width: calc(16.666666666666668% * 2 + 3px);
 			}
 			&.item-3 {
 				top: 30%;
 				left: calc(16.666666666666668% * 3 + 3px);
-				height: 70%;
+				height: 0;
 				width: calc(16.666666666666668% - 2px);
 				-webkit-filter: grayscale(100%);
 				opacity: 0.1;
-			}
-		}
-	}
-
-	// video
-	.video-wrapper {
-		pointer-events: none;
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		&.show-video video {
-			opacity: 1;
-		}
-		video {
-			opacity: 0;
-			transition: opacity .6s .5s ease;
-			position: absolute;
-			min-width: 100%;
-			min-height: 100%;
-			width: auto;
-			height: auto;
-		}
-		.video {
-			z-index: -1;
-			position: absolute;
-			overflow: hidden;
-			background: #ececec;
-			transition: height .6s 0s ease;
-			> div {
-				position: fixed;
-				top: 0;
-				left: 0;
-				width: 100%;
-				height: 100%;
-			}
-			&.video-1 {
-				top: 70%;
-				left: calc(16.666666666666668% - 9px);
-				height: 30%;
-				width: calc(16.666666666666668% * 2 + 3px);
-				video {
-					top: 50%;
-					left: 50%;
-					transform: translateX(-50%) translateY(-50%);
-				}
-			}
-			&.video-2 {
-				//top: 30%;
-				bottom: 0;
-				left: calc(16.666666666666668% * 3 + 3px);
-				//height: 70%;
-				height: 0;
-				width: calc(16.666666666666668% - 2px);
-				video {
-					bottom: 50%;
-					left: 50%;
-					transform: translateX(-50%) translateY(50%);
-				}
-			}
-			&.video-3 {
-				top: 0;
-				left: calc(16.666666666666668% * 4 + 10px);
-				height: 70%;
-				width: calc(16.666666666666668% * 2 + 9px);
-				video {
-					top: 50%;
-					left: 50%;
-					transform: translateX(-50%) translateY(-50%);
-				}
-			}
-		}
-	}
-
-	&[step="content-2"] {
-		.item-wrapper {
-			.item {
-				&.item-1, &.item-2, &.item-3 {
-					height: 0;
-				}
-			}
-		}
-		.video-wrapper .video {
-			&.video-2 {
-				height: 70%;
-			}
-		}
-		.slider-wrapper {
-			.items .item .img {
-				&.img-1 {
-					transition: height .6s 0s ease, width .6s .1s ease;
-					height: 70%;
-				}
-			}
-		}
-	}
-	&[step="content-3"] {
-		.item-wrapper {
-			.item {
-				&.item-1, &.item-2, &.item-3 {
-					height: 0;
-				}
-				&.item-4 {
-					height: 60%;
-				}
-			}
-		}
-		.video-wrapper {
-			.video {
-				transition: height .6s .1s ease;
-				&.video-1, &.video-2 {
-					height: 0;
-				}
-				&.video-3 {
-					height: 0%;
-				}
-				&.video-4 {
-					height: 0%;
-				}
-			}
-		}
-		.slider-wrapper {
-			.items .item .img {
-				&.img-1 {
-					transition: height .6s 0s ease, width .6s .1s ease;
-					height: 70%;
-				}
-				&.img-2 {
-					transition: height .6s 0s ease, width .6s .2s ease;
-					height: 70%;
-				}
-			}
-			.controls > div {
-				height: 5vw;
-			}
-			.pagination {
-				height: 10px;
-			}
-		}
-	}
-
-	// slider
-	.slider-wrapper {
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-
-		// prijects
-		.items {
-			z-index: -2;
-			pointer-events: none;
-			position: absolute;
-			top: 0;
-			left: 0;
-			width: 100%;
-			height: 100%;
-			.item {
-				position: absolute;
-				top: 0;
-				left: 0;
-				width: 100%;
-				height: 100%;
-				&.active {
-					.img {
-						&.img-1 {
-							width: calc(16.666666666666668% - 2px);
-						}
-						&.img-2 {
-							width: calc(16.666666666666668% * 2 + 9px);
-						}
-					}
-					.description {
-						width: calc(16.666666666666668% * 2 + 3px);
-					}
-				}
-
-				// images
-				.img {
-					transition: width .6s 0s ease;
-					position: absolute;
-					width: 100%;
-					height: 100%;
-					&.img-1 {
-						transition: height .6s 0s ease, width .6s .1s ease;
-						bottom: 0;
-						left: calc(16.666666666666668% * 3 + 3px);
-						//height: 70%;
-						height: 0;
-						width: 0;
-					}
-					&.img-2 {
-						transition: height .6s 0s ease, width .6s .2s ease;
-						bottom: 30%;
-						left: calc(16.666666666666668% * 4 + 10px);
-						height: 70%;
-						width: 0;
-					}
-				}
-	
-
-				// description
-				.description {
-					position: absolute;
-					bottom: 0;
-					left: calc(16.666666666666668% - 9px);
-					width: 0;
-					height: 30%;
-					transition: height .6s 0s ease, width .6s 0s ease;
-					overflow: hidden;
-					.content-wrapper {
-						padding: 2vw 2vw;
-						background: $color-2;
-						height: 100%;
-						width: 32vw;
-						h3 {
-							margin: 0 0 1.3vw 0;
-								font-size: 1.2vw;
-								text-transform: uppercase;
-								font-weight: 300;
-						}
-						p {
-							margin: 0;
-							span {
-								font-weight: 500;
-								font-size: 14px;
-							}
-						}
-						.text {
-							margin: 1vw 0;
-						}
-					}
-				}
-			}
-		}
-
-		// controls
-		.controls {
-			position: absolute;
-			bottom: 0;
-			left: calc(16.666666666666668% * 4 + 10px);
-			width: calc(16.666666666666668% - 4px - 4px);
-				font-size: 0;
-			> div {
-				transition: height .3s 0s ease;
-				height: 0;
-				width: 100%;
-				overflow: hidden;
-				position: absolute;
-				bottom: 0;
-				left: 0;
-				> div {
-					width: 100%;
-					height: 5vw;
-					position: absolute;
-					bottom: 0;
-					left: 0;
-					> div {
-						position: relative;
-						width: 5vw;
-						height: 5vw;
-						background: #ebebeb;
-						display: inline-block;
-						vertical-align: bottom;
-						cursor: pointer;
-							font-size: 16px;
-						&:after {
-							content: '';
-							position: absolute;
-							left: 50%;
-							top: 50%;
-							width: 20px;
-							height: 20px;
-							border: 1px solid;
-						}
-						&.prev {
-							margin: 0 8px 0 0;
-							&:after {
-								transform: rotate(45deg);
-								border-color: transparent transparent #5498d5 #5498d5;
-								margin: -10px 0 0 -3px;
-							}
-						}
-						&.next {
-							&:after {
-								transform: rotate(45deg);
-								border-color: #5498d5 #5498d5 transparent transparent;
-								margin: -9px 0 0 -16px;
-							}
-						}
-					}
-				}
-			}
-		}
-		// pagination
-		.pagination { display: none;
-			transition: height .6s 0s ease;
-			position: absolute;
-			bottom: 0%;
-			left: calc(16.666666666666668% * 5 + 19px);
-			width: calc(16.666666666666668% - 4px);
-			height: 0;
-			overflow: hidden;
-				text-align: right;
-				font-size: 0;
-			> div {
-				display: inline-block;
-				vertical-align: top;
-				width: 10px;
-				height: 10px;
-				background: #ebebeb;
-				&:not(:first-child) {
-					margin: 0 0 0 8px;
-				}
 			}
 		}
 	}
