--- a/scss/content/home/_step-4.scss
+++ b/scss/content/home/_step-4.scss
@@ -1,94 +1,90 @@
 .step-4 {
-	opacity: 0;
 	pointer-events: none;
 
 	// title
 	.title-step {
 		position: relative;
-		z-index: 1;
+		z-index: 2;
+		padding: 0;
+		margin: 5vw 1vw 0 18%;
+		opacity: 0;
+		transform: translateY(20px);
+		transition-property: opacity, transform;
+		transition-timing-function: $timing-ease;
+		transition-duration: $duration;
+		h2, .sub {
+			margin: 0;
+		}
 	}
 
-	// address
-	.address-wrapper {
+	// video
+	.video-wrapper {
+		pointer-events: none;
 		position: absolute;
 		top: 0;
 		left: 0;
 		width: 100%;
 		height: 100%;
-		background: image-url('map.svg') no-repeat right 30%;
-		background-size: 57vw auto;
-		.address {
+		&.show-video video {
+			opacity: 1;
+		}
+		video {
+			//opacity: 0;
+			transition: opacity .6s .5s ease;
 			position: absolute;
-			height: 0;
+			min-width: 100%;
+			min-height: 100%;
+			width: auto;
+			height: auto;
+		}
+		.video {
+			position: absolute;
 			overflow: hidden;
+			background: #ececec;
+			transition-property: height;
+			transition-timing-function: $timing-ease;
+			transition-duration: $duration;
 			> div {
-				width: 100%;
-				height: 0;
-				background: #ebebeb;
-				position: absolute;
-				left: 0;
-				overflow: hidden;
-				> div {
-					position: absolute;
-					left: 0;
-					width: 100%;
-					height: 17vw;
-					padding: 2vw;
-				}
-			}
-			&.address-1 {
-				bottom: 28%;
-				left: calc(16.66667% *2 + 4px);
-				height: 17vw;
-				width: calc(16.66667% - 4px - 4px);
-				> div {
-					transition: height .6s .2s ease;
-					bottom: 0;
-					> div {
-						bottom: 0;
-					}
-				}
-			}
-			&.address-2 {
-				bottom: 5%;
-				left: calc(16.66667% * 3 + 2px);
-				height: 17vw;
-				width: calc(16.66667% - 6px);
-				> div {
-					transition: height .6s .4s ease;
-					bottom: 0;
-					> div {
-						bottom: 0;
-					}
-				}
-			}
-			&.address-3 {
+				//position: fixed;
+				position: relative;
 				top: 0;
-				left: calc(16.66667% * 4 + 3px);
-				height: 17vw;
-				width: calc(16.66667% - 4px);
-				> div {
-					transition: height .6s 0s ease;
-					top: 0;
-					> div {
-						top: 0;
-					}
+				left: 0;
+				width: 100%;
+				height: 100%;
+			}
+			&.video-1 {
+				top: 70%;
+				left: calc(16.666666666666668% - 9px);
+				height: 0;
+				width: calc(16.666666666666668% * 2 + 3px);
+				video {
+					top: 50%;
+					left: 50%;
+					transform: translateX(-50%) translateY(-50%);
 				}
 			}
-
-			.city {
-				margin: 0;
-					font-size: 1.2vw;
-					text-transform: uppercase;
-					font-weight: 300;
-					line-height: 120%;
-					color: #5498d5;
+			&.video-2 {
+				bottom: 0;
+				left: calc(16.666666666666668% * 3 + 3px);
+				height: 0;
+				width: calc(16.666666666666668% - 2px);
+				video {
+					bottom: 50%;
+					left: 50%;
+					transform: translateX(-50%) translateY(50%);
+				}
+			}
+			&.video-3 {
+				top: 0;
+				left: calc(16.666666666666668% * 4 + 10px);
+				height: 0;
+				width: calc(16.666666666666668% * 2 + 9px);
+				video {
+					top: 50%;
+					left: 50%;
+					transform: translateX(-50%) translateY(-50%);
+				}
 			}
 		}
-	}
-
-
-	&.active .address-wrapper .address > div {
-		height: 100%;
 	}
 }
